[feat] Added Description to Service & implemented Update method
