# pkg/ssn-service-api/ssn_service_api.pb.gw.go
@@ -117,6 +117,40 @@ func local_request_SsnServiceApiService_DescribeServiceV1_0(ctx context.Context,
 
 }
 
+func request_SsnServiceApiService_UpdateServiceV1_0(ctx context.Context, marshaler runtime.Marshaler, client SsnServiceApiServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq UpdateServiceV1Request
+	var metadata runtime.ServerMetadata
+
+	newReader, berr := utilities.IOReaderFactory(req.Body)
+	if berr != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", berr)
+	}
+	if err := marshaler.NewDecoder(newReader()).Decode(&protoReq); err != nil && err != io.EOF {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := client.UpdateServiceV1(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_SsnServiceApiService_UpdateServiceV1_0(ctx context.Context, marshaler runtime.Marshaler, server SsnServiceApiServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq UpdateServiceV1Request
+	var metadata runtime.ServerMetadata
+
+	newReader, berr := utilities.IOReaderFactory(req.Body)
+	if berr != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", berr)
+	}
+	if err := marshaler.NewDecoder(newReader()).Decode(&protoReq); err != nil && err != io.EOF {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := server.UpdateServiceV1(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
 func request_SsnServiceApiService_ListServicesV1_0(ctx context.Context, marshaler runtime.Marshaler, client SsnServiceApiServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
 	var protoReq ListServicesV1Request
 	var metadata runtime.ServerMetadata
@@ -236,6 +270,29 @@ func RegisterSsnServiceApiServiceHandlerServer(ctx context.Context, mux *runtime
 		}
 
 		forward_SsnServiceApiService_DescribeServiceV1_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	mux.Handle("PUT", pattern_SsnServiceApiService_UpdateServiceV1_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/ozonmp.ssn_service_api.v1.SsnServiceApiService/UpdateServiceV1", runtime.WithHTTPPathPattern("/api/v1/services"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_SsnServiceApiService_UpdateServiceV1_0(rctx, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_SsnServiceApiService_UpdateServiceV1_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -366,6 +423,26 @@ func RegisterSsnServiceApiServiceHandlerClient(ctx context.Context, mux *runtime
 
 	})
 
+	mux.Handle("PUT", pattern_SsnServiceApiService_UpdateServiceV1_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateContext(ctx, mux, req, "/ozonmp.ssn_service_api.v1.SsnServiceApiService/UpdateServiceV1", runtime.WithHTTPPathPattern("/api/v1/services"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_SsnServiceApiService_UpdateServiceV1_0(rctx, inboundMarshaler, client, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_SsnServiceApiService_UpdateServiceV1_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	mux.Handle("GET", pattern_SsnServiceApiService_ListServicesV1_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
@@ -414,6 +491,8 @@ var (
 
 	pattern_SsnServiceApiService_DescribeServiceV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 3}, []string{"api", "v1", "services", "service_id"}, ""))
 
+	pattern_SsnServiceApiService_UpdateServiceV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"api", "v1", "services"}, ""))
+
 	pattern_SsnServiceApiService_ListServicesV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"api", "v1", "services"}, ""))
 
 	pattern_SsnServiceApiService_RemoveServiceV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 3}, []string{"api", "v1", "services", "service_id"}, ""))
@@ -423,6 +502,8 @@ var (
 	forward_SsnServiceApiService_CreateServiceV1_0 = runtime.ForwardResponseMessage
 
 	forward_SsnServiceApiService_DescribeServiceV1_0 = runtime.ForwardResponseMessage
+
+	forward_SsnServiceApiService_UpdateServiceV1_0 = runtime.ForwardResponseMessage
 
 	forward_SsnServiceApiService_ListServicesV1_0 = runtime.ForwardResponseMessage
 
